Updata no the navbar css

--- a/My-Portfolio/src/components/Styles/Navbar.css
+++ b/My-Portfolio/src/components/Styles/Navbar.css
@@ -32,10 +32,8 @@
   transition: all 1s;
 }
 
-.Nav-tags li:hover {
-  span {
-    width: 100%;
-  }
+.Nav-tags li:hover span {
+  width: 100%;
 }
 
 .Nav-tags a {
